Added nf-test for biscuit/index

--- a/modules/nf-core/biscuit/index/meta.yml
+++ b/modules/nf-core/biscuit/index/meta.yml
@@ -22,7 +22,7 @@ input:
       description: Input genome fasta file
 output:
   - index:
-      type: dir
+      type: directory
       description: Biscuit genome index directory
       pattern: "BiscuitIndex"
   - versions:
