Added nf-test for qcat

--- a/modules/nf-core/qcat/meta.yml
+++ b/modules/nf-core/qcat/meta.yml
@@ -2,6 +2,8 @@ name: qcat
 description: Demultiplexer for Nanopore samples
 keywords:
   - demultiplex
+  - nanopore
+  - sample
 tools:
   - qcat:
       description: |
