Added nf-test for pmdtools/filter

--- a/modules/nf-core/pmdtools/filter/meta.yml
+++ b/modules/nf-core/pmdtools/filter/meta.yml
@@ -28,7 +28,7 @@ input:
       description: BAM index file
       pattern: "*.bai"
   - threshold:
-      type: value
+      type: float
       description: Post-mortem damage score threshold
   - reference:
       type: file
