Added nf-test for shasum (#6419)

--- a/modules/nf-core/shasum/meta.yml
+++ b/modules/nf-core/shasum/meta.yml
@@ -9,7 +9,7 @@ tools:
       description: Create an SHA256 (256-bit) checksum.
       homepage: "https://www.gnu.org"
       documentation: "https://linux.die.net/man/1/shasum"
-      licence: GPLv3+
+      licence: ["GPLv3+"]
 input:
   - meta:
       type: map
