Added nf-test for cnvpytor/importreaddepth (#6394)
* Added nf-test for cnvpytor/importreaddepth

* Updated tool ver and snapshot

* Locked numpy version

--- a/modules/nf-core/cnvpytor/importreaddepth/meta.yml
+++ b/modules/nf-core/cnvpytor/importreaddepth/meta.yml
@@ -2,7 +2,9 @@ name: cnvpytor_importreaddepth
 description: command line tool for CNV/CNA analysis. This step imports the read depth data into a root pytor file.
 keywords:
   - read depth
-  - cnv calling
+  - cnv
+  - cna
+  - call
 tools:
   - cnvpytor -rd:
       description: calling CNVs using read depth
