Added nf-test for cnvpytor/callcnvs (#6393)

--- a/modules/nf-core/cnvpytor/callcnvs/meta.yml
+++ b/modules/nf-core/cnvpytor/callcnvs/meta.yml
@@ -1,7 +1,9 @@
 name: cnvpytor_callcnvs
-description: command line tool for calling CNVs in whole genome sequencing data
+description: Command line tool for calling CNVs in whole genome sequencing data
 keywords:
-  - CNV calling
+  - CNV
+  - call
+  - wgs
 tools:
   - cnvpytor:
       description: calling CNVs using read depth
