--- a/modules/nf-core/circexplorer2/annotate/meta.yml
+++ b/modules/nf-core/circexplorer2/annotate/meta.yml
@@ -1,6 +1,7 @@
 name: "circexplorer2_annotate"
 description: Annotate circRNAs detected in the output from CIRCexplorer2 parse
 keywords:
+  - rna
   - circrna
   - annotate
 tools:
@@ -9,7 +10,7 @@ tools:
       homepage: "https://github.com/YangLab/CIRCexplorer2/"
       documentation: "https://circexplorer2.readthedocs.io/en/latest/"
       doi: "10.1101/gr.202895.115"
-      licence: "['MIT License']"
+      licence: ["MIT License"]
 input:
   - meta:
       type: map
