Added nf-test for biobambam/bammerge (#6385)

--- a/modules/nf-core/biobambam/bammerge/meta.yml
+++ b/modules/nf-core/biobambam/bammerge/meta.yml
@@ -3,6 +3,7 @@ description: Merge a list of sorted bam files
 keywords:
   - merge
   - bam
+  - sorted
 tools:
   - biobambam:
       description: |
