--- a/modules/nf-core/fasttree/meta.yml
+++ b/modules/nf-core/fasttree/meta.yml
@@ -3,6 +3,7 @@ description: Produces a Newick format phylogeny from a multiple sequence alignme
 keywords:
   - phylogeny
   - newick
+  - alignment
 tools:
   - fasttree:
       description: FastTree infers approximately-maximum-likelihood phylogenetic trees from alignments of nucleotide or protein sequences
