Added nf-test for bwameth/index (#6387)
* Added nf-test for bwameth/index

* Updated tool ver and snapshot

* Update modules/nf-core/bwameth/index/tests/main.nf.test

---------

Co-authored-by: Simon Pearce <24893913+SPPearce@users.noreply.github.com>

--- a/modules/nf-core/bwameth/index/meta.yml
+++ b/modules/nf-core/bwameth/index/meta.yml
@@ -23,7 +23,7 @@ input:
       description: Input genome fasta file
 output:
   - index:
-      type: dir
+      type: directory
       description: Directory containing bwameth genome index
       pattern: "index"
   - versions:
