--- a/modules/nf-core/vt/normalize/meta.yml
+++ b/modules/nf-core/vt/normalize/meta.yml
@@ -12,7 +12,7 @@ tools:
       homepage: "https://genome.sph.umich.edu/wiki/Vt"
       documentation: "https://genome.sph.umich.edu/wiki/Vt"
       tool_dev_url: "https://github.com/atks/vt"
-      licence: "['MIT']"
+      licence: ["MIT"]
 input:
   - meta:
       type: map
