Added nf-test for sickle

--- a/modules/nf-core/sickle/meta.yml
+++ b/modules/nf-core/sickle/meta.yml
@@ -9,7 +9,7 @@ tools:
       description: "a tool that determines clipping of reads on 3' end and 5'end based on base quality "
       homepage: "https://github.com/najoshi/sickle"
       tool_dev_url: "https://github.com/najoshi/sickle"
-      licence: "['MIT License']"
+      licence: ["MIT License"]
 input:
   - meta:
       type: map
