Added nf-test for plink/vcf

--- a/modules/nf-core/plink/vcf/meta.yml
+++ b/modules/nf-core/plink/vcf/meta.yml
@@ -3,6 +3,8 @@ description: Analyses variant calling files using plink
 keywords:
   - plink
   - vcf
+  - variant
+  - call
 tools:
   - plink:
       description: |
