--- a/modules/nf-core/plasmidfinder/meta.yml
+++ b/modules/nf-core/plasmidfinder/meta.yml
@@ -11,7 +11,7 @@ tools:
       documentation: "https://bitbucket.org/genomicepidemiology/plasmidfinder"
       tool_dev_url: "https://bitbucket.org/genomicepidemiology/plasmidfinder"
       doi: "10.1128/AAC.02412-14"
-      licence: "['Apache-2.0']"
+      licence: ["Apache-2.0"]
 input:
   - meta:
       type: map
