Added nf-test for pindel/pindel

--- a/modules/nf-core/pindel/pindel/meta.yml
+++ b/modules/nf-core/pindel/pindel/meta.yml
@@ -9,7 +9,7 @@ tools:
       description: "Pindel can detect breakpoints of large deletions, medium sized insertions, inversions, tandem duplications and other structural variants at single-based resolution from next-gen sequence data"
       homepage: "https://gmt.genome.wustl.edu/packages/pindel/"
       documentation: https://gmt.genome.wustl.edu/packages/pindel/user-manual.html
-      licence: "['GPL v3']"
+      licence: ["GPL v3"]
 input:
   - meta:
       type: map
