Added nf-test for pbbam/pbmerge

--- a/modules/nf-core/pbbam/pbmerge/meta.yml
+++ b/modules/nf-core/pbbam/pbmerge/meta.yml
@@ -2,7 +2,8 @@ name: pbbam_pbmerge
 description: The pbbam software package provides components to create, query, & edit PacBio BAM files and associated indices. These components include a core C++ library, bindings for additional languages, and command-line utilities.
 keywords:
   - pbbam
-  - pbbam/pbmerge
+  - pbmerge
+  - bam
 tools:
   - pbbam:
       description: PacBio BAM C++ library
