--- a/modules/nf-core/panaroo/run/meta.yml
+++ b/modules/nf-core/panaroo/run/meta.yml
@@ -11,7 +11,7 @@ tools:
       documentation: "https://gtonkinhill.github.io/panaroo/#/gettingstarted/quickstart"
       tool_dev_url: "https://github.com/gtonkinhill/panaroo"
       doi: "10.1186/s13059-020-02090-4"
-      licence: "['MIT']"
+      licence: ["MIT"]
 input:
   - meta:
       type: map
