Added nf-test for gfatools/gfa2fa

--- a/modules/nf-core/gfatools/gfa2fa/meta.yml
+++ b/modules/nf-core/gfatools/gfa2fa/meta.yml
@@ -16,7 +16,7 @@ tools:
       documentation: "https://github.com/lh3/gfatools"
       tool_dev_url: "https://github.com/lh3/gfatools"
       doi: "no DOI available"
-      licence: "['Unknown']"
+      licence: ["Unknown"]
 input:
   - meta:
       type: map
