Added nf-test for gappa/examineheattree

--- a/modules/nf-core/gappa/examineheattree/tests/nextflow.config
+++ b/modules/nf-core/gappa/examineheattree/tests/nextflow.config
@@ -1,10 +1,6 @@
 process {
-
-    publishDir = { "${params.outdir}/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}" }
-
-    withName: '.*EXAMINEHEATTREE.*' {
+    withName: 'GAPPA_EXAMINEHEATTREE' {
         ext.args = "--write-newick-tree --write-nexus-tree --write-phyloxml-tree --write-svg-tree"
         prefix   = { "${meta.id}.heat-tree." }
     }
-    
 }
