--- a/modules/nf-core/gappa/examineheattree/meta.yml
+++ b/modules/nf-core/gappa/examineheattree/meta.yml
@@ -12,7 +12,7 @@ tools:
       documentation: "https://github.com/lczech/gappa/wiki"
       tool_dev_url: "https://github.com/lczech/gappa"
       doi: "10.1093/bioinformatics/btaa070"
-      licence: "['GPL v3']"
+      licence: ["GPL v3"]
 input:
   - meta:
       type: map
