--- a/modules/nf-core/entrezdirect/esummary/meta.yml
+++ b/modules/nf-core/entrezdirect/esummary/meta.yml
@@ -28,10 +28,10 @@ input:
         Groovy Map containing sample information
         e.g. [ id:'test', single_end:false ]
   - database:
-      type: value
+      type: string
       description: Value must be a valid Entrez database name ('assembly', etc).
   - uid:
-      type: value
+      type: string
       description: Unique Identifier (UID) of record in NCBI database. Cannot be used at the same time as uids_file
   - uids_file:
       type: file
