--- a/modules/nf-core/elprep/split/meta.yml
+++ b/modules/nf-core/elprep/split/meta.yml
@@ -3,6 +3,7 @@ description: Split bam file into manageable chunks
 keywords:
   - bam
   - split by chromosome
+  - chunk
 tools:
   - "elprep":
       description: "elPrep is a high-performance tool for preparing .sam/.bam files for variant calling in sequencing pipelines. It can be used as a drop-in replacement for SAMtools/Picard/GATK4."
@@ -10,7 +11,7 @@ tools:
       documentation: "https://github.com/ExaScience/elprep"
       tool_dev_url: "https://github.com/ExaScience/elprep"
       doi: "10.1371/journal.pone.0244471"
-      licence: "['AGPL v3']"
+      licence: ["AGPL v3"]
 input:
   - meta:
       type: map
