Added nf-test for eido/convert

--- a/modules/nf-core/eido/convert/meta.yml
+++ b/modules/nf-core/eido/convert/meta.yml
@@ -12,7 +12,7 @@ tools:
       homepage: "http://eido.databio.org/en/latest/"
       documentation: "http://eido.databio.org/en/latest/"
       doi: "10.1093/gigascience/giab077"
-      licence: "BSD-2-Clause"
+      licence: ["BSD-2-Clause"]
 input:
   - samplesheet:
       type: file
