--- a/modules/nf-core/scimap/mcmicro/meta.yml
+++ b/modules/nf-core/scimap/mcmicro/meta.yml
@@ -29,23 +29,18 @@ output:
       description: |
         Groovy Map containing sample information
         e.g. [ id:'test', single_end:false ]
-  #
   - versions:
       type: file
       description: File containing software versions
       pattern: "versions.yml"
-  - annotedDataCsv:
+  - csv:
       type: file
       description: Sorted CSV file
       pattern: "*.{csv}"
-  - annotedDataH5ad:
+  - h5ad:
       type: file
       description: Sorted H5AD file
       pattern: "*.{h5ad}"
-      # - clusterPlot:
-      #     type: file
-      #     description: UPMA plot of the data in pdf file
-      #     pattern: "*.pdf"
 authors:
   - "@luiskuhn"
 maintainers:
