--- a/modules/nf-core/paragraph/vcf2paragraph/environment.yml
+++ b/modules/nf-core/paragraph/vcf2paragraph/environment.yml
@@ -1,7 +1,10 @@
 name: paragraph_vcf2paragraph
+
 channels:
   - conda-forge
   - bioconda
   - defaults
+
 dependencies:
+  - bioconda::htslib=1.10.2
   - bioconda::paragraph=2.3
