--- a/modules/nf-core/vg/construct/meta.yml
+++ b/modules/nf-core/vg/construct/meta.yml
@@ -22,12 +22,12 @@ input:
         Groovy Map containing sample information
         e.g. [ id:'test', single_end:false ]
   - input:
-      type: file(s)
+      type: list
       description: |
         Either one or more VCF files containing different contigs or a multiple sequence alignment file
       pattern: "*.{vcf.gz,fa,fasta,fna,clustal}"
   - tbis:
-      type: file(s)
+      type: list
       description: The index files for the VCF files
       pattern: "*.tbi"
   - insertions_fasta:
