--- a/modules/nf-core/pbptyper/meta.yml
+++ b/modules/nf-core/pbptyper/meta.yml
@@ -11,7 +11,7 @@ tools:
       homepage: "https://github.com/rpetit3/pbptyper"
       documentation: "https://github.com/rpetit3/pbptyper"
       tool_dev_url: "https://github.com/rpetit3/pbptyper"
-      licence: "['MIT']"
+      licence: ["MIT"]
 input:
   - meta:
       type: map
