--- a/modules/nf-core/pasty/meta.yml
+++ b/modules/nf-core/pasty/meta.yml
@@ -11,7 +11,7 @@ tools:
       homepage: "https://github.com/rpetit3/pasty"
       documentation: "https://github.com/rpetit3/pasty"
       tool_dev_url: "https://github.com/rpetit3/pasty"
-      licence: "['Apache-2.0']"
+      licence: ["Apache-2.0"]
 input:
   - meta:
       type: map
