Added nf-test for nanolyse

--- a/modules/nf-core/nanolyse/meta.yml
+++ b/modules/nf-core/nanolyse/meta.yml
@@ -1,7 +1,9 @@
 name: nanolyse
 description: DNA contaminant removal using NanoLyse
 keywords:
-  - contaminant_removal
+  - contaminant
+  - removal
+  - dna
 tools:
   - nanolyse:
       description: |
