Added nf-test for mykrobe/predict

--- a/modules/nf-core/mykrobe/predict/meta.yml
+++ b/modules/nf-core/mykrobe/predict/meta.yml
@@ -11,7 +11,7 @@ tools:
       documentation: "https://github.com/Mykrobe-tools/mykrobe/wiki"
       tool_dev_url: "https://github.com/Mykrobe-tools/mykrobe"
       doi: "10.1038/ncomms10063"
-      licence: "['MIT']"
+      licence: ["MIT"]
 input:
   - meta:
       type: map
