Added nf-test for mitohifi/findmitoreference

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -333,8 +333,6 @@ jobs:
           - profile: conda
             tags: minimap2/align
           - profile: conda
-            tags: mitohifi/findmitoreference
-          - profile: conda
             tags: mitohifi/mitohifi
           - profile: conda
             tags: nanoplot
@@ -600,6 +598,8 @@ jobs:
             path: modules/nf-core/sentieon/qualcal
           - profile: conda
             path: modules/nf-core/spaceranger/mkgtf
+          - profile: conda
+            path: modules/nf-core/mitohifi/findmitoreference
           - profile: conda
             path: modules/nf-core/spaceranger/mkref
           - profile: conda
