--- a/modules/nf-core/kleborate/meta.yml
+++ b/modules/nf-core/kleborate/meta.yml
@@ -1,8 +1,10 @@
 name: kleborate
 description: Kleborate is a tool to screen genome assemblies of Klebsiella pneumoniae and the Klebsiella pneumoniae species complex (KpSC).
 keywords:
-  - screening assemblies
-  - Klebsiella pneumoniae
+  - screen
+  - assembly
+  - Klebsiella
+  - pneumoniae
 tools:
   - kleborate:
       description: Screening Klebsiella genome assemblies for MLST, sub-species, and other Klebsiella related genes of interest
@@ -18,7 +20,7 @@ input:
         Groovy Map containing sample information
         e.g. [ id:'test', single_end:false ]
   - fastas:
-      type: files
+      type: list
       description: Klebsiella genome assemblies to be screened
       pattern: "*.fasta"
 output:
