Locked conda versions

--- a/modules/nf-core/mobsuite/recon/environment.yml
+++ b/modules/nf-core/mobsuite/recon/environment.yml
@@ -5,3 +5,5 @@ channels:
   - defaults
 dependencies:
   - bioconda::mob_suite=3.0.3
+  - conda-forge::python=3.8.10 # Lock with container
+  - conda-forge::numpy=1.21.1 # Lock with container
