--- a/modules/nf-core/snapaligner/index/meta.yml
+++ b/modules/nf-core/snapaligner/index/meta.yml
@@ -12,7 +12,7 @@ tools:
       documentation: "https://1drv.ms/b/s!AhuEg_0yZD86hcpblUt-muHKYsG8fA?e=R8ogug"
       tool_dev_url: "https://github.com/amplab/snap"
       doi: "10.1101/2021.11.23.469039"
-      licence: "['Apache v2']"
+      licence: ["Apache v2"]
 input:
   - meta2:
       type: map
