Added nf-test for miranda

--- a/modules/nf-core/miranda/meta.yml
+++ b/modules/nf-core/miranda/meta.yml
@@ -10,7 +10,7 @@ tools:
       homepage: "https://cbio.mskcc.org/miRNA2003/miranda.html"
       documentation: "https://cbio.mskcc.org/miRNA2003/miranda.html"
       doi: "10.1186/gb-2003-5-1-r1"
-      licence: "GNU Public License"
+      licence: ["GNU Public License"]
 input:
   - meta:
       type: map
