--- a/modules/nf-core/mcroni/meta.yml
+++ b/modules/nf-core/mcroni/meta.yml
@@ -3,13 +3,14 @@ description: Analysis of mcr-1 gene (mobilized colistin resistance) for sequence
 keywords:
   - resistance
   - fasta
+  - mcr-1
 tools:
   - "mcroni":
       description: "Scripts for finding and processing promoter variants upstream of mcr-1"
       homepage: "https://github.com/liampshaw/mcroni"
       documentation: "https://github.com/liampshaw/mcroni"
       tool_dev_url: "https://github.com/liampshaw/mcroni"
-      licence: "['MIT']"
+      licence: ["MIT"]
 input:
   - meta:
       type: map
