--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -319,6 +319,8 @@ jobs:
           - profile: conda
             tags: manta/convertinversion
           - profile: conda
+            tags: mcstaging/imc2mc
+          - profile: conda
             tags: mcquant
           - profile: conda
             tags: medaka
