--- a/tests/config/test_data.config
+++ b/tests/config/test_data.config
@@ -862,6 +862,9 @@ params {
             'spot_detection' {
                 image                   = "${params.test_data_base}/data/imaging/spot_detection/immunofluorescence.tif"
             }
+            'imc_staging' {
+                text                    = "${params.test_data_base}/data/imaging/staging/imaging_mass_cytometry/acquisition.txt"
+            }
         }
     }
 }
