add conda exception in nf-test section of test.yml

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -577,6 +577,8 @@ jobs:
           - profile: conda
             path: modules/nf-core/imputeme/vcftoprs
           - profile: conda
+            path: modules/nf-core/mcstaging/imc2mc
+          - profile: conda
             path: modules/nf-core/mcquant
           - profile: conda
             path: modules/nf-core/merquryfk/katcomp
