--- a/modules/nf-core/mirtrace/qc/meta.yml
+++ b/modules/nf-core/mirtrace/qc/meta.yml
@@ -13,7 +13,7 @@ tools:
       documentation: "https://github.com/friedlanderlab/mirtrace/blob/master/release-bundle-includes/doc/manual/mirtrace_manual.pdf"
       tool_dev_url: "https://github.com/friedlanderlab/mirtrace/tree/master"
       doi: "https://doi.org/10.1186/s13059-018-1588-9"
-      licence: ['GPL v2']
+      licence: ["GPL v2"]
 
 input:
   - meta:
