Added nf-test for calder2

--- a/modules/nf-core/calder2/meta.yml
+++ b/modules/nf-core/calder2/meta.yml
@@ -24,7 +24,7 @@ input:
       description: Path to COOL file
       pattern: "*.{cool.mcool}"
   - resolution:
-      type: value
+      type: integer
       description: In case a .mcool file is provided, which resolution level to use for the analysis
 output:
   - meta:
