Added nf-test for cnvpytor/partition

--- a/modules/nf-core/cnvpytor/partition/meta.yml
+++ b/modules/nf-core/cnvpytor/partition/meta.yml
@@ -1,11 +1,13 @@
 name: cnvpytor_partition
-description: partitioning read depth histograms
+description: Partitioning read depth histograms
 keywords:
-  - cnv calling
-  - partition histograms
+  - cnv
+  - call
+  - partition
+  - histogram
 tools:
   - cnvpytor:
-      description: calling CNVs using read depth
+      description: Calling CNVs using read depth
       homepage: https://github.com/abyzovlab/CNVpytor
       documentation: https://github.com/abyzovlab/CNVpytor
       tool_dev_url: https://github.com/abyzovlab/CNVpytor
