--- a/modules/nf-core/cnvpytor/partition/environment.yml
+++ b/modules/nf-core/cnvpytor/partition/environment.yml
@@ -4,4 +4,5 @@ channels:
   - bioconda
   - defaults
 dependencies:
-  - bioconda::cnvpytor=1.2.1
+  - bioconda::cnvpytor=1.3.1
+  - conda-forge::numpy=1.24.3 # Locked from container
