Added nf-test for gvcftools/extractvariants

--- a/modules/nf-core/gvcftools/extractvariants/meta.yml
+++ b/modules/nf-core/gvcftools/extractvariants/meta.yml
@@ -12,7 +12,7 @@ tools:
       homepage: "https://sites.google.com/site/gvcftools/home"
       documentation: "https://sites.google.com/site/gvcftools/home/configuration-and-analysis"
       tool_dev_url: "https://github.com/sequencing/gvcftools"
-      licence: "['MIT']"
+      licence: ["MIT"]
 input:
   - meta:
       type: map
