--- a/modules/nf-core/calder2/meta.yml
+++ b/modules/nf-core/calder2/meta.yml
@@ -19,7 +19,7 @@ input:
   - meta:
       type: map
       description: Groovy Map containing sample information. E.g. [ id:'test', single_end:false ]
-  - input:
+  - cool:
       type: file
       description: Path to COOL file
       pattern: "*.{cool.mcool}"
@@ -34,10 +34,10 @@ output:
       type: file
       description: File containing software versions
       pattern: "versions.yml"
-  - output:
+  - output_folder:
       type: directory
       description: Output folder containing sub-compartment (.tsv/.bed) and domain boundaries calls (.bed)
-  - intermediate_data:
+  - intermediate_data_folder:
       type: directory
       description: Output folder containing intermediate data produced during the computation
 authors:
