Added nf-test for vg/index

--- a/modules/nf-core/vg/index/meta.yml
+++ b/modules/nf-core/vg/index/meta.yml
@@ -20,7 +20,7 @@ input:
         Groovy Map containing sample information
         e.g. [ id:'test', single_end:false ]
   - input:
-      type: file(s)
+      type: list
       description: One or more input graph files created with `vg/construct`
       pattern: "*.vg"
 output:
