--- a/modules/nf-core/sniffles/meta.yml
+++ b/modules/nf-core/sniffles/meta.yml
@@ -21,7 +21,7 @@ input:
       type: file
       description: A single .bam/.cram file - OR - one or more .snf files - OR - a single .tsv file containing a list of .snf files and optional sample ids as input
       pattern: "*.{bam,cram,snf,tsv}"
-  - bai:
+  - index:
       type: file
       description: Index of BAM/CAM file
       pattern: "*.{bai,crai}"
