--- a/modules/nf-core/msisensorpro/msitumoronly/meta.yml
+++ b/modules/nf-core/msisensorpro/msitumoronly/meta.yml
@@ -19,7 +19,7 @@ input:
       type: map
       description: |
         Groovy Map containing sample information
-        e.g. [ id:'test', single_end:false ]
+        e.g. [ id:'test' ]
   - tumor:
       type: file
       description: BAM/CRAM/SAM file
