--- a/modules/nf-core/mirtrace/qc/meta.yml
+++ b/modules/nf-core/mirtrace/qc/meta.yml
@@ -12,7 +12,7 @@ tools:
       homepage: "https://github.com/friedlanderlab/mirtrace/tree/master"
       documentation: "https://github.com/friedlanderlab/mirtrace/blob/master/release-bundle-includes/doc/manual/mirtrace_manual.pdf"
       tool_dev_url: "https://github.com/friedlanderlab/mirtrace/tree/master"
-      doi: "https://doi.org/10.1186/s13059-018-1588-9"
+      doi: "10.1186/s13059-018-1588-9"
       licence: ["GPL v2"]
 
 input:
