--- a/modules/nf-core/kat/hist/environment.yml
+++ b/modules/nf-core/kat/hist/environment.yml
@@ -2,6 +2,12 @@ name: kat_hist
 channels:
   - conda-forge
   - bioconda
-  - defaults
 dependencies:
   - bioconda::kat=2.4.2
+  - conda-forge::python=3.8.5 # Locked with the container
+  - conda-forge::numpy=1.19.1 # Locked with the container
+  - conda-forge::scipy=1.5.2 # Locked with the container
+  - conda-forge::matplotlib=3.3.1 # Locked with the container
+  - conda-forge::zlib=1.0 # Locked with the container
+  - conda-forge::zlib=1.0 # Locked with the container
+  - conda-forge::boost-cpp=1.72.0 # Locked with the container
