mcstaging/imc2mc (#6506)
* create module

* update meta.yml

* add main.nf

* add nextflow.config file

* adding tests

* finish tests

* add conda exception in nf-test section of test.yml

* change main.nf.test

---------

Co-authored-by: Krešimir Beštak <86408271+kbestak@users.noreply.github.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -317,6 +317,8 @@ jobs:
           - profile: conda
             tags: manta/convertinversion
           - profile: conda
+            tags: mcstaging/imc2mc
+          - profile: conda
             tags: mcquant
           - profile: conda
             tags: medaka
@@ -572,6 +574,8 @@ jobs:
             path: modules/nf-core/ilastik/pixelclassification
           - profile: conda
             path: modules/nf-core/imputeme/vcftoprs
+          - profile: conda
+            path: modules/nf-core/mcstaging/imc2mc
           - profile: conda
             path: modules/nf-core/mcquant
           - profile: conda
