mcstaging/phenoimager2mc (#6143)
* create initial module

* added nextflow.config file

* add test.snap

* adapt main.nf to module

* adapt meta.yml file

* deleted env file

* adapted nf.test

* add test data specifications to test_data.config

* added single files to test data

* adapt input to file list, nor working yet

* adapted to linting req, 3 warnings remain

* successful tests, linting and prettier

* ran test again for snapshot file

* addressed minor comments in meta.yml

* remove comment

* remove conda test

* adapt snapshot versions output and delete old snapshots

* delete comment

* add stub test

* Update modules/nf-core/mcstaging/phenoimager2mc/tests/main.nf.test

Co-authored-by: Krešimir Beštak <86408271+kbestak@users.noreply.github.com>

* Update modules/nf-core/mcstaging/phenoimager2mc/tests/main.nf.test

Co-authored-by: Krešimir Beštak <86408271+kbestak@users.noreply.github.com>

* Update modules/nf-core/mcstaging/phenoimager2mc/tests/main.nf.test

Co-authored-by: Krešimir Beštak <86408271+kbestak@users.noreply.github.com>

* Update modules/nf-core/mcstaging/phenoimager2mc/tests/main.nf.test

Co-authored-by: Krešimir Beštak <86408271+kbestak@users.noreply.github.com>

* Update modules/nf-core/mcstaging/phenoimager2mc/tests/main.nf.test

Co-authored-by: Krešimir Beštak <86408271+kbestak@users.noreply.github.com>

---------

Co-authored-by: Miguel A. Ibarra-Arellano <ibarrarellano@gmail.com>
Co-authored-by: Krešimir Beštak <kbestak@gmail.com>
Co-authored-by: Simon Pearce <24893913+SPPearce@users.noreply.github.com>
Co-authored-by: Krešimir Beštak <86408271+kbestak@users.noreply.github.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -579,6 +579,8 @@ jobs:
           - profile: conda
             path: modules/nf-core/mcquant
           - profile: conda
+            path: modules/nf-core/mcstaging/phenoimager2mc
+          - profile: conda
             path: modules/nf-core/merquryfk/katcomp
           - profile: conda
             path: modules/nf-core/merquryfk/katgc
