--- a/modules/nf-core/jvarkit/vcfpolyx/meta.yml
+++ b/modules/nf-core/jvarkit/vcfpolyx/meta.yml
@@ -19,7 +19,13 @@ tools:
 
 ## TODO nf-core: Add a description of all of the variables used as input
 input:
-  #
+  # Only when we have meta
+  - meta:
+      type: map
+      description: |
+        Groovy Map containing sample information
+        e.g. `[ id:'sample1', single_end:false ]`
+  
   ## TODO nf-core: Delete / customise this example input
   - bam:
       type: file
@@ -28,7 +34,13 @@ input:
 
 ## TODO nf-core: Add a description of all of the variables used as output
 output:
-  #
+  #Only when we have meta
+  - meta:
+      type: map
+      description: |
+        Groovy Map containing sample information
+        e.g. `[ id:'sample1', single_end:false ]`
+  
   - versions:
       type: file
       description: File containing software versions
