--- a/modules/nf-core/nextclade/run/meta.yml
+++ b/modules/nf-core/nextclade/run/meta.yml
@@ -40,11 +40,31 @@ output:
       type: file
       description: CSV file containing nextclade results
       pattern: "*.{csv}"
+  - csv_errors:
+      type: file
+      description: CSV file containing errors from nextclade results
+      pattern: "*.{errors.csv}"
+  - csv_insertions:
+      type: file
+      description: CSV file containing insertions from nextclade results
+      pattern: "*.{insertions.csv}"
+  - fasta_aligned:
+      type: file
+      description: FASTA file containing aligned sequences from nextclade results
+      pattern: "*.{aligned.fasta}"
+  - fasta_translation:
+      type: file
+      description: FASTA file containing aligned peptides from nextclade results
+      pattern: "*.{_translation.}*.{fasta}"
+  - ndjson:
+      type: file
+      description: newline-delimited JSON file containing nextclade results
+      pattern: "*.{ndjson}"
   - json:
       type: file
       description: JSON file containing nextclade results
       pattern: "*.{json}"
-  - json_tree:
+  - json_auspice:
       type: file
       description: Auspice JSON V2 containing nextclade results
       pattern: "*.{tree.json}"
