--- a/modules/nf-core/deepvariant/makeexamples/meta.yml
+++ b/modules/nf-core/deepvariant/makeexamples/meta.yml
@@ -74,7 +74,7 @@ output:
   - gvcf:
       type: list
       description: |
-        Tuple containing an unique ID (hash), sample metadata, and the GVCF data in tfrecord format
+        Tuple containing sample metadata and the GVCF data in tfrecord format
   - versions:
       type: file
       description: File containing the DeepVariant software version
