--- a/modules/nf-core/gatk4/genotypegvcfs/meta.yml
+++ b/modules/nf-core/gatk4/genotypegvcfs/meta.yml
@@ -23,7 +23,7 @@ input:
   - input:
       type: file
       description: |
-        gVCF(.gz) file or to a GenomicsDB
+        gVCF(.gz) file or a GenomicsDB
       pattern: "*.{vcf,vcf.gz}"
   - gvcf_index:
       type: file
