--- a/modules/nf-core/tcoffee/seqreformat/meta.yml
+++ b/modules/nf-core/tcoffee/seqreformat/meta.yml
@@ -19,7 +19,7 @@ input:
         Groovy Map containing sample information
         e.g. `[ id:'test' ]`
 
-  - fasta:
+  - infile:
       type: file
       description: Input file to be reformatted
       pattern: "*"
