--- a/modules/nf-core/tcoffee/consensus/meta.yml
+++ b/modules/nf-core/tcoffee/consensus/meta.yml
@@ -1,4 +1,4 @@
-name: "tcoffee_consensus"
+name: tcoffee_consensus
 description: Computes a consensus alignment using T_COFFEE
 keywords:
   - alignment
