--- a/modules/nf-core/tcoffee/consensus/meta.yml
+++ b/modules/nf-core/tcoffee/consensus/meta.yml
@@ -56,7 +56,7 @@ output:
       pattern: "versions.yml"
   - alignment:
       type: file
-      description: Cnsensus alignment in FASTA format
+      description: Consensus alignment in FASTA format
       pattern: "*.{fa,fasta,aln}"
 
 authors:
