--- a/modules/nf-core/tcoffee/consensus/meta.yml
+++ b/modules/nf-core/tcoffee/consensus/meta.yml
@@ -12,7 +12,7 @@ tools:
       tool_dev_url: "https://github.com/cbcrg/tcoffee"
       doi: "10.1006/jmbi.2000.4042"
       licence: ["GPL v3"]
-  - "pigz":
+  - pigz:
       description: "Parallel implementation of the gzip algorithm."
       homepage: "https://zlib.net/pigz/"
       documentation: "https://zlib.net/pigz/pigz.pdf"
