Check tfrecord file names

--- a/modules/nf-core/deepvariant/callvariants/tests/nextflow.config
+++ b/modules/nf-core/deepvariant/callvariants/tests/nextflow.config
@@ -1,6 +1,7 @@
 process {
     withName: "DEEPVARIANT_CALLVARIANTS" {
         ext.args = '--checkpoint "/opt/models/wgs"'
+        cpus = 2 // Keep CPUs fixed so the number of output files is reproducible
     }
 }
 process {
