--- a/modules/nf-core/mirtop/export/environment.yml
+++ b/modules/nf-core/mirtop/export/environment.yml
@@ -6,3 +6,7 @@ channels:
   - bioconda
 dependencies:
   - "bioconda::mirtop=0.4.25"
+  - "bioconda::samtools=1.15.1"
+  - "conda-forge::r-base=4.1.1"
+  - "conda-forge::r-data.table=1.14.2"
+  - python=3.11
