--- a/modules/nf-core/mirtop/gff/environment.yml
+++ b/modules/nf-core/mirtop/gff/environment.yml
@@ -7,3 +7,6 @@ channels:
 dependencies:
   - "bioconda::mirtop=0.4.25"
   - "bioconda::samtools=1.15.1"
+  - "conda-forge::r-base=4.1.1"
+  - "conda-forge::r-data.table=1.14.2"
+  - python=3.11
