Added nf-test for msisensor/scan

--- a/modules/nf-core/msisensor/scan/meta.yml
+++ b/modules/nf-core/msisensor/scan/meta.yml
@@ -1,7 +1,10 @@
 name: msisensor_scan
 description: Scan a reference genome to get microsatellite & homopolymer information
 keywords:
-  - homoploymer,microsatellite
+  - homopolymer
+  - microsatellite
+  - somatic
+  - germline
 tools:
   - msisensor:
       description: MSIsensor is a C++ program to detect replication slippage variants at microsatellite regions, and differentiate them as somatic or germline.
