--- a/modules/nf-core/gatk4/genotypegvcfs/meta.yml
+++ b/modules/nf-core/gatk4/genotypegvcfs/meta.yml
@@ -40,7 +40,7 @@ input:
       type: map
       description: |
         Groovy Map containing fasta information
-        e.g. [ id:'test', single_end:false ]
+        e.g. [ id:'test' ]
   - fasta:
       type: file
       description: Reference fasta file
