--- a/modules/nf-core/gatk4/genotypegvcfs/meta.yml
+++ b/modules/nf-core/gatk4/genotypegvcfs/meta.yml
@@ -49,7 +49,7 @@ input:
       type: map
       description: |
         Groovy Map containing fai information
-        e.g. [ id:'test', single_end:false ]
+        e.g. [ id:'test' ]
   - fai:
       type: file
       description: Reference fasta index file
