--- a/modules/nf-core/gatk4/genotypegvcfs/meta.yml
+++ b/modules/nf-core/gatk4/genotypegvcfs/meta.yml
@@ -58,7 +58,7 @@ input:
       type: map
       description: |
         Groovy Map containing dict information
-        e.g. [ id:'test', single_end:false ]
+        e.g. [ id:'test' ]
   - dict:
       type: file
       description: Reference fasta sequence dict file
