--- a/modules/nf-core/gatk4/genotypegvcfs/meta.yml
+++ b/modules/nf-core/gatk4/genotypegvcfs/meta.yml
@@ -67,7 +67,7 @@ input:
       type: map
       description: |
         Groovy Map containing dbsnp information
-        e.g. [ id:'test', single_end:false ]
+        e.g. [ id:'test' ]
   - dbsnp:
       type: file
       description: dbSNP VCF file
