--- a/modules/nf-core/gatk4/genotypegvcfs/meta.yml
+++ b/modules/nf-core/gatk4/genotypegvcfs/meta.yml
@@ -76,7 +76,7 @@ input:
       type: map
       description: |
         Groovy Map containing dbsnp tbi information
-        e.g. [ id:'test', single_end:false ]
+        e.g. [ id:'test' ]
   - dbsnp_tbi:
       type: file
       description: dbSNP VCF index file
