--- a/modules/nf-core/jvarkit/vcfpolyx/meta.yml
+++ b/modules/nf-core/jvarkit/vcfpolyx/meta.yml
@@ -14,15 +14,15 @@ tools:
       homepage: "https://github.com/lindenb/jvarkit"
       documentation: "https://jvarkit.readthedocs.io/"
       tool_dev_url: "https://github.com/lindenb/jvarkit"
-      doi: "http://dx.doi.org/10.6084/m9.figshare.1425030"
+      doi: "10.6084/m9.figshare.1425030"
       licence: ['MIT License']
 
   - "bcftools":
       description: |
         View, subset and filter VCF or BCF files by position and filtering expression. Convert between VCF and BCF
-      homepage: http://samtools.github.io/bcftools/bcftools.html
-      documentation: http://www.htslib.org/doc/bcftools.html
-      doi: 10.1093/bioinformatics/btp352
+      homepage: "http://samtools.github.io/bcftools/bcftools.html"
+      documentation: "http://www.htslib.org/doc/bcftools.html"
+      doi: "10.1093/bioinformatics/btp352"
       licence: ["MIT"]
 
 input:
